package ar.edu.utn.frba.dds.Bienes;

public enum EstadoUso {
  NUEVO,
  USADO
}
