package ar.edu.utn.frba.dds;

public enum EstadoNotificacion {
  PENDIENTE,
  COMPLETADA,
  FALLIDA
}
