package ar.edu.utn.frba.dds.Logistica;

import ar.edu.utn.frba.dds.Bienes.DonacionSegmentada;

public class Destino {
  private String direccion;
  private DonacionSegmentada donacion;
}
