package ar.edu.utn.frba.dds.Logistica;

public enum EstadoCamion {
  DISPONIBLE,
  EN_DEPOSITO,
  EN_MANTENIMIENTO,
  RUTA_ASIGNADA,
  REALIZANDO_ENTREGAS
}
